--- a/index.html
+++ b/index.html
@@ -28,6 +28,22 @@
         gtag('config', 'UA-123660863-1');
     </script>
 
+    <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
+    <script>
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyC1gGqUBuUIpNWAIRdQytER7qfaGHdx-Hw",
+            authDomain: "weather-me-269b7.firebaseapp.com",
+            databaseURL: "https://weather-me-269b7.firebaseio.com",
+            projectId: "weather-me-269b7",
+            storageBucket: "",
+            messagingSenderId: "136107283905"
+        };
+        firebase.initializeApp(config);
+    </script>
+
+    <script src="js/app.js"></script>
+
 
 </head>
 <body>
