--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <main role="main" class="inner cover">
         <h1 class="cover-heading">Know what to wear, anywhere.</h1>
-        <p class="lead">Choose the perfect cloth for the perfect weather!</p>
+        <p class="lead">Get suggestions of what to wear, based on the current weather.</p>
 
         <p class="lead">
             <iframe class="landing-video" width="560" height="315"
@@ -87,14 +87,25 @@
             <img src="media/app_store_badge.svg" alt="google play" class="landing-badge" id="download-app-store"
                  data-toggle="modal" data-target="#exampleModal">
 
+
         </p>
+
+        <a class="btn btn-outline-secondary" href="https://www.surveymonkey.com/r/5YRYQHP" target="_blank">
+            <i class="far fa-comment"></i>
+            Give your feedback!
+        </a>
+
+        <button class="btn btn-outline-secondary" id="share-to-friend">
+            <i class="far fa-share-square"></i>
+            Send to a friend
+        </button>
 
     </main>
 
     <footer class="mastfoot mt-auto">
-        <div class="inner">
-            <p> Weather.me - All rights reserved</p>
-        </div>
+        <!--<div class="inner">-->
+            <!--<p> Weather.me - All rights reserved</p>-->
+        <!--</div>-->
     </footer>
 </div>
 
@@ -114,7 +125,7 @@
                     We already distributed more than 50 invites for our current beta test.
                 </p>
                <p> <strong>
-                   If you want to join our waitlist, just leave your e-mail below and we'll submit an invitation as soon as possible.</strong></p>
+                   If you want to join our waitlist, just leave your e-mail below and we'll submit an invitation as soon as its available.</strong></p>
 
 
                 <form id="waitlist-form">
