--- a/index.html
+++ b/index.html
@@ -76,8 +76,10 @@
         <p class="lead">Get suggestions of what to wear, based on the current weather.</p>
 
         <p class="lead">
+
+
             <iframe class="landing-video" width="560" height="315"
-                    src="https://www.youtube.com/embed/ZbFuk7zhTUk?rel=0&amp;showinfo=0&autoplay=1" frameborder="0"
+                    src="https://www.youtube.com/embed/e9kmohiPGKo?rel=0&amp;showinfo=0&autoplay=1" frameborder="0"
                     allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </p>
         <p class="lead">
@@ -87,18 +89,20 @@
             <img src="media/app_store_badge.svg" alt="google play" class="landing-badge" id="download-app-store"
                  data-toggle="modal" data-target="#exampleModal">
 
+            <a class="btn btn-outline-secondary" href="https://www.surveymonkey.com/r/5YRYQHP" target="_blank">
+                <i class="far fa-comment"></i>
+                Give your feedback!
+            </a>
 
+
+
+            <!--<button class="btn btn-outline-secondary" id="share-to-friend">-->
+            <!--<i class="far fa-share-square"></i>-->
+            <!--Send to a friend-->
+            <!--</button>-->
         </p>
 
-        <a class="btn btn-outline-secondary" href="https://www.surveymonkey.com/r/5YRYQHP" target="_blank">
-            <i class="far fa-comment"></i>
-            Give your feedback!
-        </a>
 
-        <button class="btn btn-outline-secondary" id="share-to-friend">
-            <i class="far fa-share-square"></i>
-            Send to a friend
-        </button>
 
     </main>
 
