button adjustments and page title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Weather.me</title>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
           integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
@@ -65,8 +65,7 @@
             <h3 class="masthead-brand">Weather.me</h3>
             <nav class="nav nav-masthead justify-content-center">
                 <a class="nav-link active" href="#">Home</a>
-                <a class="nav-link" href="#">Features</a>
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="https://www.surveymonkey.com/r/5YRYQHP" target="_blank">Give your Feedback</a>
             </nav>
         </div>
     </header>
@@ -75,19 +74,21 @@
         <h1 class="cover-heading">Know what to wear, anywhere.</h1>
         <p class="lead">Get suggestions of what to wear, based on the current weather.</p>
 
-        <p class="lead">
 
 
-            <iframe class="landing-video" width="560" height="315"
-                    src="https://www.youtube.com/embed/e9kmohiPGKo?rel=0&amp;showinfo=0&autoplay=1" frameborder="0"
-                    allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </p>
         <p class="lead">
             <img src="media/google_play_badge.svg" alt="google play" class="landing-badge" id="download-google-play"
                  data-toggle="modal" data-target="#exampleModal">
 
             <img src="media/app_store_badge.svg" alt="google play" class="landing-badge" id="download-app-store"
                  data-toggle="modal" data-target="#exampleModal">
+
+            <iframe class="landing-video" width="560" height="315"
+                    src="https://www.youtube.com/embed/e9kmohiPGKo?rel=0&amp;showinfo=0&autoplay=1" frameborder="0"
+                    allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </p>
+        <p class="lead">
+
 
             <a class="btn btn-outline-secondary" href="https://www.surveymonkey.com/r/5YRYQHP" target="_blank">
                 <i class="far fa-comment"></i>
