--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Oops! Sorry!</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button id="close-modal" type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
